--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,26 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pexels_lisa_1402407"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <Button
+        android:id="@+id/loginButton"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="612dp"
+        android:layout_marginEnd="150dp"
+        android:fontFamily="@font/aclonica"
+        android:padding="5dp"
+        android:text="Login Tester"
+        android:textAlignment="center"
+        android:textColor="#808080"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/signOut"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="536dp"
+        android:layout_marginEnd="150dp"
+        android:fontFamily="@font/aclonica"
+        android:padding="5dp"
+        android:text="Sign Out"
+        android:textAlignment="center"
+        android:textColor="#808080"
+        android:onClick="logout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/pexels_lisa_1402407" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
