--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,6 +15,7 @@
         android:background="#CC800B0B"
         android:fontFamily="@font/aclonica"
         android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:text="---------------------------------------------"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
@@ -30,6 +31,7 @@
         android:background="#CC800B0B"
         android:fontFamily="@font/aclonica"
         android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:text="---------------------------------------------"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
@@ -45,6 +47,7 @@
         android:background="#CC800B0B"
         android:fontFamily="@font/aclonica"
         android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:text="---------------------------------------------"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
@@ -154,11 +157,11 @@
         android:id="@+id/WhiteBox1"
         android:layout_width="300dp"
         android:layout_height="100dp"
+        android:background="@drawable/roundstyle"
+        android:backgroundTint="#CCFFFFFF"
         android:fontFamily="@font/aclonica"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="#CCFFFFFF"
         android:text="Need a change?"
         android:textAlignment="textStart"
         android:textColor="#000000"
