--- a/app/src/main/res/layout/activity_rewards2.xml
+++ b/app/src/main/res/layout/activity_rewards2.xml
@@ -111,7 +111,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/RewardPointsCollected"
         android:layout_width="206dp"
         android:layout_height="29dp"
         android:layout_marginBottom="100dp"
