--- a/app/src/main/res/layout/activity_rewards2.xml
+++ b/app/src/main/res/layout/activity_rewards2.xml
@@ -8,8 +8,8 @@
     tools:context=".RewardsActivity2">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="420dp"
+        android:id="@+id/topRewardsBox"
+        android:layout_width="450dp"
         android:layout_height="120dp"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,7 +18,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/pointsCollectedBox"
+        android:layout_width="284dp"
+        android:layout_height="142dp"
+        android:background="#F4F4F4"
+        app:layout_constraintBottom_toTopOf="@+id/CoffeePic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topRewardsBox" />
+
+    <TextView
+        android:id="@+id/RewardsText"
         android:layout_width="223dp"
         android:layout_height="70dp"
         android:letterSpacing=".1"
@@ -34,7 +44,18 @@
         app:layout_constraintVertical_bias="0.015" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/congratsBox"
+        android:layout_width="295dp"
+        android:layout_height="152dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CoffeePic"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/earnPointsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:letterSpacing=".1"
@@ -45,42 +66,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/RewardsText"
         app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="315dp"
-        android:layout_height="145dp"
-        android:layout_marginBottom="16dp"
-        android:contentDescription="@string/congratsbox"
-        android:src="@drawable/rectanlge"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="296dp"
-        android:layout_height="137dp"
-        android:layout_marginTop="30dp"
-        android:contentDescription="@string/pointscollectedbox"
-        android:src="@drawable/rectanlge"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="166dp"
-        android:layout_height="37dp"
-        android:layout_marginBottom="44dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView7" />
+        android:layout_width="200dp"
+        android:layout_height="48dp"
+        app:layout_constraintBottom_toBottomOf="@+id/pointsCollectedBox"
+        app:layout_constraintEnd_toEndOf="@+id/pointsCollectedBox"
+        app:layout_constraintStart_toStartOf="@+id/pointsCollectedBox"
+        app:layout_constraintTop_toTopOf="@+id/pointsCollectedBox" />
 
     <TextView
         android:id="@+id/textView4"
@@ -91,35 +88,63 @@
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
-        app:layout_constraintEnd_toEndOf="@+id/imageView8"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toTopOf="@+id/imageView8" />
+        app:layout_constraintBottom_toBottomOf="@+id/congratsBox"
+        app:layout_constraintEnd_toEndOf="@+id/congratsBox"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintStart_toStartOf="@+id/congratsBox"
+        app:layout_constraintTop_toTopOf="@+id/congratsBox"
+        app:layout_constraintVertical_bias="0.110000014" />
 
     <TextView
         android:id="@+id/RewardPointsCollected"
         android:layout_width="206dp"
         android:layout_height="29dp"
-        android:layout_marginBottom="92dp"
         android:text="@string/points_collected"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView7" />
+        app:layout_constraintBottom_toBottomOf="@+id/pointsCollectedBox"
+        app:layout_constraintEnd_toEndOf="@+id/pointsCollectedBox"
+        app:layout_constraintStart_toStartOf="@+id/pointsCollectedBox"
+        app:layout_constraintTop_toTopOf="@+id/pointsCollectedBox"
+        app:layout_constraintVertical_bias="0.13" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/CoffeePic"
         android:layout_width="300dp"
         android:layout_height="220dp"
-        android:layout_marginTop="20dp"
+        android:contentDescription="@string/coffeepic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/topRewardsBox"
+        app:layout_constraintVertical_bias="0.43"
         app:srcCompat="@drawable/coffee1" />
+
+    <TextView
+        android:id="@+id/earnedText"
+        android:layout_width="234dp"
+        android:layout_height="60dp"
+        android:text="@string/you_have_earned_a"
+        app:layout_constraintBottom_toBottomOf="@+id/congratsBox"
+        app:layout_constraintEnd_toEndOf="@+id/congratsBox"
+        app:layout_constraintHorizontal_bias="0.35"
+        app:layout_constraintStart_toStartOf="@+id/congratsBox"
+        app:layout_constraintTop_toTopOf="@+id/congratsBox"
+        app:layout_constraintVertical_bias="0.45" />
+
+    <Button
+        android:id="@+id/DetailsButton"
+        android:layout_width="99dp"
+        android:layout_height="48dp"
+        android:background="#FDFDFD"
+        android:text="@string/details"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="@+id/congratsBox"
+        app:layout_constraintEnd_toEndOf="@+id/congratsBox"
+        app:layout_constraintStart_toStartOf="@+id/congratsBox"
+        app:layout_constraintTop_toTopOf="@+id/congratsBox"
+        app:layout_constraintVertical_bias="0.92" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
