--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="612dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="150dp"
         android:fontFamily="@font/aclonica"
         android:padding="5dp"
@@ -29,15 +29,15 @@
         android:id="@+id/signOut"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="536dp"
-        android:layout_marginEnd="150dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="300dp"
         android:fontFamily="@font/aclonica"
+        android:onClick="logout"
         android:padding="5dp"
         android:text="Sign Out"
         android:textAlignment="center"
         android:textColor="#808080"
-        android:onClick="logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="428dp"
+        android:layout_marginTop="432dp"
         android:layout_marginEnd="150dp"
         android:fontFamily="@font/aclonica"
         android:onClick="paymentActivity13"
@@ -66,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="348dp"
+        android:layout_marginTop="272dp"
         android:layout_marginEnd="150dp"
         android:fontFamily="@font/aclonica"
         android:onClick="rewardsActivityButton"
@@ -84,11 +84,26 @@
         android:layout_width="47dp"
         android:layout_height="43dp"
         android:layout_marginTop="24dp"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.909"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:onClick="profilePage"
-        app:srcCompat="@drawable/accounticon" />
+        app:srcCompat="@drawable/account_icon" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        app:menu="@menu/navigation_items"
+        app:itemRippleColor="@color/white"
+        app:itemIconTint="@color/icons_color"
+        app:layout_constraintBottom_toBottomOf="parent" >
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
