-Renamed Files for organization -Added Main Important page files. (Based off Figma)

--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -10,29 +10,33 @@
 
     <TextView
         android:id="@+id/backGroundCover"
-        android:layout_width="379dp"
+        android:layout_width="0dp"
         android:layout_height="530dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:background="#CCC6BEBE"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/WalletArtCover"
-        android:layout_width="379dp"
+        android:layout_width="0dp"
         android:layout_height="210dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/walletcover"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/backGroundCover"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -58,9 +62,11 @@
 
     <com.craftman.cardform.CardForm
         android:id="@+id/card_form"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="550dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="108dp"
+        android:layout_marginEnd="16dp"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
