--- a/app/src/main/res/drawable/roundstyle.xml
+++ b/app/src/main/res/drawable/roundstyle.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:topLeftRadius="15dp"/>
-    <corners android:topRightRadius="15dp" />
-    <corners android:bottomLeftRadius="15dp"/>
-    <corners android:bottomRightRadius="15dp"/>
+    <textView android:topLeftRadius="15dp"/>
+    <textView android:topRightRadius="15dp" />
+    <textView android:bottomLeftRadius="15dp"/>
+    <textView android:bottomRightRadius="15dp"/>
+
 </shape>
